# vibegang

./: .gitignore  README.md  pyproject.toml
src/cto_inv/: analysis.py  cli.py  ingest.py  utils.py
tests/: conftest.py  test_cli.py
