[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cto-inv"
version = "0.0.1"
description = "CTO Investigator prototype CLI for ingestion and static analysis"
authors = [{ name = "CTO.new", email = "devnull@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["solidity", "analysis", "ingestion", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer[all]>=0.12.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "readability-lxml>=0.8.1",
  "lxml>=4.9.0",
  "pdfminer.six>=20221105",
  "rich>=13.0.0",
]

[project.optional-dependencies]
analysis = [
  "slither-analyzer>=0.9.5; platform_system != 'Windows'",  # optional, may require solc
]

dynamic = []

[project.scripts]
cto-inv = "cto_inv.cli:app"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

